--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,27 +13,38 @@
 
 <body>
 	<header>
-		   
-	<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
+
+		<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
+		<a href="#inicio"><img src="c:/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
+		<nav>
 			<ul>
-				<li><img src="/proyecto-1-cod-latam/img/mariana-logo.png"></img></li>	
-				<li><a href="#inicio">Inicio</a></li>	
-				<li><a href="#contacto">Contacto<a/></li>	
-			</ul>		
+				<li><a href="#inicio">Inicio</a></li>
+				<li><a href="#contacto">Contacto</a></li>
+			</ul>
+		</nav>
 
 	</header>
-		<!-- La estructura básica y la vinculación con CSS estan listas. A codear! 💪  -->	
-		<!-- En este archivo escriban su HTML -->
+	<!-- La estructura básica y la vinculación con CSS estan listas. A codear! 💪  -->
+	<!-- En este archivo escriban su HTML -->
 	<main>
 		<section ID="inicio">
-			<img src="/proyecto-1-cod-latam/img/mariana-0.jpg"></img>
-			<h1>
-				Hola! soy Jose Teodoro
-			</h1>
-			<p>
-			</p>
+			<figure>
+				<img src="c:/proyecto-1-cod-latam/img/mariana-0.jpg">
+			</figure>
+			<article>
+				<h1>
+					Hola! soy Jose Teodoro
+				</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque alias impedit explicabo consequuntur
+					nam, quaerat nihil, quasi assumenda laudantium molestiae at accusantium ex repellendus cum numquam
+					fugit! Beatae, distinctio ipsa!
+				</p>
+			</article>
+
 			<button>
-				Descargar mi CV
+				<a href="https://drive.google.com/file/d/1HR99ZNW_cpjXwuRS61Jqw_47Ol1VxAaJ/view?usp=sharing"
+					target="_blank">Descargar mi CV</a>
 			</button>
 		</section>
 		<section ID="contacto">
@@ -40,17 +52,24 @@
 				Hablemos!
 			</h2>
 			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus nulla omnis, assumenda
+				explicabo impedit eum facilis doloremque enim libero natus nemo molestiae velit ipsum hic cupiditate
+				illo qui veritatis.
 			</p>
 			<ul>
-				<li><img src="/proyecto-1-cod-latam/img/github.png"></img></li>	
-				<li><img src="/proyecto-1-cod-latam/img/linkedin.png"></img></li>	
-				<li><img src="/proyecto-1-cod-latam/img/mail.png"></img></li>	
-			</ul>			
-		</section>		
+				<li><a href="https://github.com/Parasitic-art-guild/proyecto-1-cod-latam" target="_blank"><img
+							src="c:/proyecto-1-cod-latam/img/github.png"></a></li>
+				<li><a href="http://www.linkedin.com/in/instalacionmantenimientoindustrialmayoristas"
+						target="_blank"><img src="c:/proyecto-1-cod-latam/img/linkedin.png"></a></li>
+						<!--https://mailtolinkgenerator.com/-->
+				<li><a href="mailto:plan.mantenimiento.industrial@gmail.com?subject=Deseo%20ponerme%20en%20contacto%20contigo" target="_blank"><img
+							src="c:/proyecto-1-cod-latam/img/mail.png"></a></li>
+			</ul>
+		</section>
 	</main>
 	<footer>
 		Desde Bogota, Colombia.
 	</footer>
-
 </body>
+
 </html>
