--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 							src="c:/proyecto-1-cod-latam/img/github.png"></a></li>
 				<li><a href="http://www.linkedin.com/in/instalacionmantenimientoindustrialmayoristas"
 						target="_blank"><img src="c:/proyecto-1-cod-latam/img/linkedin.png"></a></li>
-						<!--https://mailtolinkgenerator.com/-->
-				<li><a href="mailto:plan.mantenimiento.industrial@gmail.com?subject=Deseo%20ponerme%20en%20contacto%20contigo" target="_blank"><img
-							src="c:/proyecto-1-cod-latam/img/mail.png"></a></li>
+				<!--https://mailtolinkgenerator.com/-->
+				<li><a href="mailto:plan.mantenimiento.industrial@gmail.com?subject=Deseo%20ponerme%20en%20contacto%20contigo"
+						target="_blank"><img src="c:/proyecto-1-cod-latam/img/mail.png"></a></li>
 			</ul>
 		</section>
 	</main>
@@ -71,5 +71,7 @@
 		Desde Bogota, Colombia.
 	</footer>
 </body>
-
 </html>
+<!--gitt add .
+git commit -m "mariana-202306     "
+git push-->
