--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 
 <body>
 	<header>
-
-		<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
-		<a href="#inicio"><img src="c:/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
 		<nav>
-			<ul>
-				<li><a href="#inicio">Inicio</a></li>
-				<li><a href="#contacto">Contacto</a></li>
-			</ul>
-		</nav>
+			<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
+			<a href="#inicio"><img src="c:/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
 
+
+			<a href="#inicio">Inicio</a>
+			<a href="#contacto">Contacto</a>
+		</nav>
 	</header>
 	<!-- La estructura básica y la vinculación con CSS estan listas. A codear! 💪  -->
 	<!-- En este archivo escriban su HTML -->
@@ -71,6 +69,7 @@
 		Desde Bogota, Colombia.
 	</footer>
 </body>
+
 </html>
 <!--gitt add .
 git commit -m "mariana-202306     "
