--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header>
 		<nav>
 			<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
-			<a href="#inicio"><img src="c:/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
+			<a href="#inicio"><img src="/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
 
 
 			<a href="#inicio">Inicio</a>
@@ -27,7 +27,7 @@
 	<main>
 		<section ID="inicio">
 			<figure>
-				<img src="c:/proyecto-1-cod-latam/img/mariana-0.jpg">
+				<img src="/proyecto-1-cod-latam/img/mariana-0.jpg">
 			</figure>
 			<article>
 				<h1>
@@ -40,10 +40,7 @@
 				</p>
 			</article>
 
-			<button>
-				<a href="https://drive.google.com/file/d/1HR99ZNW_cpjXwuRS61Jqw_47Ol1VxAaJ/view?usp=sharing"
-					target="_blank">Descargar mi CV</a>
-			</button>
+			<a href="https://drive.google.com/file/d/1HR99ZNW_cpjXwuRS61Jqw_47Ol1VxAaJ/view?usp=sharing" target="_blank">Descargar mi CV</a>			
 		</section>
 		<section ID="contacto">
 			<h2>
@@ -56,18 +53,25 @@
 			</p>
 			<ul>
 				<li><a href="https://github.com/Parasitic-art-guild/proyecto-1-cod-latam" target="_blank"><img
-							src="c:/proyecto-1-cod-latam/img/github.png"></a></li>
+							src="/proyecto-1-cod-latam/img/github.png"></a></li>
 				<li><a href="http://www.linkedin.com/in/instalacionmantenimientoindustrialmayoristas"
-						target="_blank"><img src="c:/proyecto-1-cod-latam/img/linkedin.png"></a></li>
+						target="_blank"><img src="/proyecto-1-cod-latam/img/linkedin.png"></a></li>
 				<!--https://mailtolinkgenerator.com/-->
 				<li><a href="mailto:plan.mantenimiento.industrial@gmail.com?subject=Deseo%20ponerme%20en%20contacto%20contigo"
-						target="_blank"><img src="c:/proyecto-1-cod-latam/img/mail.png"></a></li>
+						target="_blank"><img src="/proyecto-1-cod-latam/img/mail.png"></a></li>
+			
 			</ul>
+			<footer>
+				<p>
+					Desde Bogota, Colombia.
+				</p>	
+
+			</footer>
 		</section>
 	</main>
-	<footer>
-		Desde Bogota, Colombia.
-	</footer>
+	
+
+	
 </body>
 
 </html>
