--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<title>JOSE TEODORO SOSA DAZA</title>
 	<!-- Alias: Parasitic-art-guild        Alias proyecto: Mariana-->
 	<!-- CSS -->
-	<link rel="stylesheet" href="/proyecto-1-cod-latam/css/styles.css">
+	<link rel="stylesheet" href="C:/proyecto-1-cod-latam/css/styles.css">
 </head>
 
 <body>
 	<header>
 		<nav>
 			<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
-			<a href="#inicio"><img src="/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
+			<a href="#inicio"><img src="C:/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
 
 
 			<a href="#inicio">Inicio</a>
@@ -27,7 +27,7 @@
 	<main>
 		<section ID="inicio">
 			<figure>
-				<img src="/proyecto-1-cod-latam/img/mariana-0.jpg">
+				<img src="C:/proyecto-1-cod-latam/img/mariana-0.jpg">
 			</figure>
 			<article>
 				<h1>
@@ -40,38 +40,41 @@
 				</p>
 			</article>
 
-			<a href="https://drive.google.com/file/d/1HR99ZNW_cpjXwuRS61Jqw_47Ol1VxAaJ/view?usp=sharing" target="_blank">Descargar mi CV</a>			
+			<a href="https://drive.google.com/file/d/1HR99ZNW_cpjXwuRS61Jqw_47Ol1VxAaJ/view?usp=sharing"
+				target="_blank">Descargar mi CV</a>
 		</section>
 		<section ID="contacto">
-			<h2>
-				Hablemos!
-			</h2>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus nulla omnis, assumenda
-				explicabo impedit eum facilis doloremque enim libero natus nemo molestiae velit ipsum hic cupiditate
-				illo qui veritatis.
-			</p>
+			<div ID= "hablemos">
+				<h2>
+					Hablemos!
+				</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus nulla omnis, assumenda
+					explicabo impedit eum facilis doloremque enim libero natus nemo molestiae velit ipsum hic cupiditate
+					illo qui veritatis.
+				</p>
+			</div>
 			<ul>
 				<li><a href="https://github.com/Parasitic-art-guild/proyecto-1-cod-latam" target="_blank"><img
-							src="/proyecto-1-cod-latam/img/github.png"></a></li>
+							src="C:/proyecto-1-cod-latam/img/github.png"></a></li>
 				<li><a href="http://www.linkedin.com/in/instalacionmantenimientoindustrialmayoristas"
-						target="_blank"><img src="/proyecto-1-cod-latam/img/linkedin.png"></a></li>
+						target="_blank"><img src="C:/proyecto-1-cod-latam/img/linkedin.png"></a></li>
 				<!--https://mailtolinkgenerator.com/-->
 				<li><a href="mailto:plan.mantenimiento.industrial@gmail.com?subject=Deseo%20ponerme%20en%20contacto%20contigo"
-						target="_blank"><img src="/proyecto-1-cod-latam/img/mail.png"></a></li>
-			
+						target="_blank"><img src="C:/proyecto-1-cod-latam/img/mail.png"></a></li>
+
 			</ul>
 			<footer>
 				<p>
 					Desde Bogota, Colombia.
-				</p>	
+				</p>
 
 			</footer>
 		</section>
 	</main>
-	
 
-	
+
+
 </body>
 
 </html>
