--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				target="_blank">Descargar mi CV</a>
 		</section>
 		<section ID="contacto">
-			<div ID= "hablemos">
+			<article>
 				<h2>
 					Hablemos!
 				</h2>
@@ -53,7 +53,7 @@
 					explicabo impedit eum facilis doloremque enim libero natus nemo molestiae velit ipsum hic cupiditate
 					illo qui veritatis.
 				</p>
-			</div>
+			</article>
 			<ul>
 				<li><a href="https://github.com/Parasitic-art-guild/proyecto-1-cod-latam" target="_blank"><img
 							src="C:/proyecto-1-cod-latam/img/github.png"></a></li>
