--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
 					Hola! soy Jose Teodoro
 				</h1>
 				<p>
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque alias impedit explicabo consequuntur
-					nam, quaerat nihil, quasi assumenda laudantium molestiae at accusantium ex repellendus cum numquam
-					fugit! Beatae, distinctio ipsa!
+					Tecnólogo en electricidad y electrónica, especialista en mantenimiento predictivo,
+					preventivo y correctivo de instrumentación, maquinaria industrial y comercial.
+					Acciono sobre equipos de plantas de tratamiento; bombas dosificadoras, válvulas, tamices,
+					aireadores. Motores AC/DC, instrumentación, dispositivos electrónicos industriales tales como
+					sensores, PLC, controladores de temperatura, tarjetas, máquinas electromecánicas con motores,
+					válvulas, pistones, cajas de transmisión, troqueles. Equipos eléctricos con resistencias de
+					calentamientos, ventiladores, extractores, etc. Equipos de HVAC, generadores eléctricos, prensas,
+					molinos, troqueles, iluminación, calderas, hornos, etc.
+
 				</p>
 			</article>
 
@@ -49,9 +55,10 @@
 					Hablemos!
 				</h2>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus nulla omnis, assumenda
-					explicabo impedit eum facilis doloremque enim libero natus nemo molestiae velit ipsum hic cupiditate
-					illo qui veritatis.
+					Sobre contratos de mantenimiento en diferentes modalidades, resolucion de fallas cronicas, analisis
+					de cauza-raiz y planes de mejora. <br>
+					Mantenimentos correctivos y preventivos. <br>
+					Creacion de programas y documentacion. <br>
 				</p>
 			</article>
 			<ul>
