--- a/index.html
+++ b/index.html
@@ -35,14 +35,8 @@
 				</h1>
 				<p>
 					Tecnólogo en electricidad y electrónica, especialista en mantenimiento predictivo,
-					preventivo y correctivo de instrumentación, maquinaria industrial y comercial.
-					Acciono sobre equipos de plantas de tratamiento; bombas dosificadoras, válvulas, tamices,
-					aireadores. Motores AC/DC, instrumentación, dispositivos electrónicos industriales tales como
-					sensores, PLC, controladores de temperatura, tarjetas, máquinas electromecánicas con motores,
-					válvulas, pistones, cajas de transmisión, troqueles. Equipos eléctricos con resistencias de
-					calentamientos, ventiladores, extractores, etc. Equipos de HVAC, generadores eléctricos, prensas,
-					molinos, troqueles, iluminación, calderas, hornos, etc.
-
+					preventivo y correctivo de instrumentación, maquinaria industrial y comercial. <br>
+					Acciono sobre equipos en plantas de produccion, edificaciones comerciales y residenciales.
 				</p>
 			</article>
 
