--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<title>JOSE TEODORO SOSA DAZA</title>
 	<!-- Alias: Parasitic-art-guild        Alias proyecto: Mariana-->
 	<!-- CSS -->
-	<link rel="stylesheet" href="C:/proyecto-1-cod-latam/css/styles.css">
+	<link rel="stylesheet" href="./proyecto-1-cod-latam/css/styles.css">
 </head>
 
 <body>
 	<header>
 		<nav>
 			<!-- Logo  e hipervinculo para ir al inicio y a contacotos-->
-			<a href="#inicio"><img src="C:/proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
+			<a href="#inicio"><img src="./proyecto-1-cod-latam/img/mariana-logo.png" alt="logotipo"></a>
 
 
 			<a href="#inicio">Inicio</a>
@@ -27,7 +27,7 @@
 	<main>
 		<section ID="inicio">
 			<figure>
-				<img src="C:/proyecto-1-cod-latam/img/mariana-0.jpg">
+				<img src="./proyecto-1-cod-latam/img/mariana-0.jpg">
 			</figure>
 			<article>
 				<h1>
@@ -57,12 +57,12 @@
 			</article>
 			<ul>
 				<li><a href="https://github.com/Parasitic-art-guild/proyecto-1-cod-latam" target="_blank"><img
-							src="C:/proyecto-1-cod-latam/img/github.png"></a></li>
+							src="./proyecto-1-cod-latam/img/github.png"></a></li>
 				<li><a href="http://www.linkedin.com/in/instalacionmantenimientoindustrialmayoristas"
-						target="_blank"><img src="C:/proyecto-1-cod-latam/img/linkedin.png"></a></li>
+						target="_blank"><img src="./proyecto-1-cod-latam/img/linkedin.png"></a></li>
 				<!--https://mailtolinkgenerator.com/-->
 				<li><a href="mailto:plan.mantenimiento.industrial@gmail.com?subject=Deseo%20ponerme%20en%20contacto%20contigo"
-						target="_blank"><img src="C:/proyecto-1-cod-latam/img/mail.png"></a></li>
+						target="_blank"><img src="./proyecto-1-cod-latam/img/mail.png"></a></li>
 
 			</ul>
 			<footer>
