--- a/index.html
+++ b/index.html
@@ -65,14 +65,19 @@
 						target="_blank"><img src="/proyecto-1-cod-latam/img/mail.png"></a></li>
 
 			</ul>
-			<footer>
+			<!--<footer>
 				<p>
 					Desde Bogota, Colombia.
 				</p>
 
-			</footer>
+			</footer>-->
 		</section>
+		<footer>
+			<p>
+				Desde Bogota, Colombia.
+			</p>
 
+		</footer>
 
 	</main>
 
